test/scope9.l1.out
scope9.l1:5: warning: reference to unbound variable: unboundvar
error: reference to unbound variable: unboundvar
                 foo	(scope9.l1:5)
               entry	(scope9.l1:15)
